2006-11-01  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add an entry key for "help file", because otherwise
	this takes you to a section on avs binary format (confusing).

2006-10-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_ticdef) src/save.c (save_tics): Sace/show textcolor
	of tic labels correctly for cases other than a pure linetype (TC_LT).
	Bug #1586427

2006-10-22  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/graphics.c (plot_image_or_update_axes): Operator | is
	forbidden on real C99 booleans.  Use || instead.

	* src/datafile.c (df_readbinary): Operator | is forbidden on real
	C99 booleans.  Use || instead.

	* src/axis.c (setup_tics): Operator & is forbidden on real C99
	booleans.  Use && instead.

	* config/makefile.oww (WCFLAGS): Add -za99 to enable _Bool type in
	recent versions of OpenWatcom.
	(default): Mark .SYMBOLIC for wmake.
	(texticon.ico): Avoid endless rebuild by copying the generation
	command.

2006-10-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): Fix bug limiting the options for reading a
	plot key label from the data file; now allow title subcommand:
	    plot foo using 1:(column(N)) title column(N)

	* src/plot2d.c (get_data): Add #ifdef EAM_HISTOGRAMS to a section that
	prevented configuration with --disable-histograms

2006-10-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Rework the summary displayed at the end of the
	'configure' script, so that it is more complete, useful, consistent and
	still readable.

2006-10-20  Bernhard Simon

	* src/color.c (make_palette): Add missing stderr parameter in 
	FPRINTF debugging statements.

2006-10-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: option to control treatment of non-ascii characters
	"set term svg raw" - pass them through unaltered
	"set term svg escaped" - replace byte-by-byte with &#xNN;

	* configure.in: Print a warning if snprintf() is not found during auto-