@@ -1,3 +1,8 @@
+2006-11-03  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (df_readbinary): Fix error in logic of 2D and 3D
+	rotation matrix initialization.
+
 2006-11-01  Ethan Merritt  <merritt@u.washington.edu>
 
 	* docs/gnuplot.doc: Add an entry key for "help file", because otherwise
